--- a/notebook/TwoAgentChat_UserPorxy.ipynb
+++ b/notebook/TwoAgentChat_UserPorxy.ipynb
@@ -54,7 +54,9 @@
    "metadata": {},
    "source": [
     "### Define a UserAgent\n",
-    "To define a UserAgent that takes input from user, we can implement `IAgent` interface and define 'CallAsync' method."
+    "To define a UserAgent that takes input from user, we can implement `IAgent` interface and define 'CallAsync' method.\n",
+    "\n",
+    ">Note: This class is also available in `AgentChat.Example.Share` with the name `NotebookUserAgent`"
    ]
   },
   {
@@ -132,12 +134,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start chatting"
+    "### Start a new chat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -151,20 +153,36 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "hey"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Message from GPT\n",
+      "--------------------\n",
+      "Hello! How can I assist you today?\n",
+      "--------------------\n",
+      "\n",
+      "Message from Human\n",
+      "--------------------\n",
+      "Tell me a joke\n",
+      "--------------------\n",
+      "\n",
+      "Message from GPT\n",
+      "--------------------\n",
+      "Sure, here's a joke for you:\n",
+      "\n",
+      "Why don't scientists trust atoms?\n",
+      "\n",
+      "Because they make up everything!\n",
+      "--------------------\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "var conversation = await userAgent.SendMessageToAgentAsync(\n",
     "    receiver: gptAgent,\n",
-    "    chatHistory: null,\n",
-    "    maxRound: 3);"
+    "    chatHistory: null, // start a new conversation\n",
+    "    maxRound: 3); // exit after 3 rounds"
    ]
   }
  ],
