--- a/notebook/TwoAgentChat_Basic.ipynb
+++ b/notebook/TwoAgentChat_Basic.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.0-6606539100</span></li><li><span>AgentChat.GPT, 0.2.0-6606539100</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.0-6606840838</span></li><li><span>AgentChat.GPT, 0.2.0-6606840838</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -134,78 +134,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "message length 1\n",
       "Message from Bob\n",
       "--------------------\n",
-      "Sure, I'm ready to help you with your math questions. Please go ahead and ask the first question.\n",
+      "Sure, I'm ready to answer your math questions. Please go ahead and ask the first question.\n",
       "--------------------\n",
       "\n",
-      "message length 3\n",
       "Message from Alice\n",
       "--------------------\n",
       "Great! Here's the first question:\n",
       "\n",
-      "What is the square root of 64?\n",
+      "Question 1: How many sides does a triangle have?\n",
       "\n",
       "Please provide your answer.\n",
       "--------------------\n",
       "\n",
-      "message length 4\n",
       "Message from Bob\n",
       "--------------------\n",
-      "The square root of 64 is 8.\n",
+      "A triangle has 3 sides.\n",
+      "\n",
       "--------------------\n",
       "\n",
-      "message length 5\n",
       "Message from Alice\n",
       "--------------------\n",
-      "That's correct! Well done!\n",
+      "That's correct! A triangle indeed has 3 sides. Well done!\n",
       "\n",
-      "Here's the next question:\n",
+      "Now, let's move on to the next question:\n",
       "\n",
-      "What is 7 multiplied by 9?\n",
+      "Question 2: What is the sum of 2 and 3?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
       "--------------------\n",
       "\n",
-      "message length 6\n",
       "Message from Bob\n",
       "--------------------\n",
-      "7 multiplied by 9 is equal to 63.\n",
+      "The sum of 2 and 3 is 5.\n",
+      "\n",
       "\n",
       "--------------------\n",
       "\n",
-      "message length 7\n",
       "Message from Alice\n",
       "--------------------\n",
-      "That's correct! Good job!\n",
+      "Great job! You are absolutely correct. The sum of 2 and 3 is indeed 5.\n",
       "\n",
-      "Here's the final question:\n",
+      "Now, let's move on to the final question:\n",
       "\n",
-      "What is 15 divided by 3?\n",
+      "Question 3: How many fingers does a person have on one hand?\n",
       "\n",
       "Please provide your answer.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
-      "message length 8\n",
       "Message from Bob\n",
       "--------------------\n",
-      "15 divided by 3 is equal to 5.\n",
+      "A person has 5 fingers on one hand.\n",
       "\n",
       "\n",
       "--------------------\n",
       "\n",
-      "message length 9\n",
       "Message from Alice\n",
       "--------------------\n",
-      "That's correct! Well done!\n",
+      "Well done! You are absolutely correct. A person has 5 fingers on one hand.\n",
       "\n",
-      "Congratulations, you have answered all the math questions correctly. Great job!\n",
+      "Congratulations on answering all the questions correctly! You did a fantastic job.\n",
       "\n",
-      "Thank you for your help. If you have any more questions or need further assistance, feel free to ask.\n",
+      "Thank you for participating in this math challenge. If you have any more questions or need further assistance, feel free to ask.\n",
       "\n",
       "[GROUPCHAT_TERMINATE]\n",
       "--------------------\n",
@@ -235,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -295,8 +289,24 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".NET (C#)",
+   "language": "C#",
+   "name": ".net-csharp"
+  },
   "language_info": {
    "name": "python"
+  },
+  "polyglot_notebook": {
+   "kernelInfo": {
+    "defaultKernelName": "csharp",
+    "items": [
+     {
+      "aliases": [],
+      "name": "csharp"
+     }
+    ]
+   }
   }
  },
  "nbformat": 4,
