--- a/notebook/TwoAgentChat_Coding.ipynb
+++ b/notebook/TwoAgentChat_Coding.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.1-1</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.1-1</span></li><li><span>AgentChat.Example.Share, 0.2.1-1</span></li><li><span>AgentChat.GPT, 0.2.1-1</span></li></ul></div></div>"
+       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.2-1</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.2-1</span></li><li><span>AgentChat.Example.Share, 0.2.2-1</span></li><li><span>AgentChat.GPT, 0.2.2-1</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -42,7 +42,7 @@
     }
    ],
    "source": [
-    "// #i \"nuget:https://www.myget.org/F/agentchat/api/v3/index.json\"\n",
+    "#i \"nuget:https://www.myget.org/F/agentchat/api/v3/index.json\"\n",
     "\n",
     "#r \"nuget:AgentChat.Core,*-*\"\n",
     "#r \"nuget:AgentChat.GPT,*-*\"\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -345,9 +345,7 @@
       "raw function call: {\n",
       "  \"code\": \"int n = 10;\\nint fib1 = 0;\\nint fib2 = 1;\\nint fibN = 0;\\n\\nfor (int i = 2; i <= n; i++)\\n{\\n    fibN = fib1 + fib2;\\n    fib1 = fib2;\\n    fib2 = fibN;\\n}\\n\\nConsole.WriteLine($\\\"The 10th Fibonacci number is: {fibN}\\\");\"\n",
       "}\n",
-      "Runner: The 10th Fibonacci number is: 55\n",
-      "\n",
-      "Message from User\n",
+      "Message from Runner\n",
       "--------------------\n",
       "The 10th Fibonacci number is: 55\n",
       "\n",
@@ -355,50 +353,7 @@
       "\n",
       "Message from Coder\n",
       "--------------------\n",
-      "COMPLETE\n",
-      "--------------------\n",
-      "\n",
-      "Message from User\n",
-      "--------------------\n",
-      "what's the 20th Fibonacci?\n",
-      "--------------------\n",
-      "\n",
-      "Message from Coder\n",
-      "--------------------\n",
-      "```csharp\n",
-      "int n = 20;\n",
-      "int fib1 = 0;\n",
-      "int fib2 = 1;\n",
-      "int fibN = 0;\n",
-      "\n",
-      "for (int i = 2; i <= n; i++)\n",
-      "{\n",
-      "    fibN = fib1 + fib2;\n",
-      "    fib1 = fib2;\n",
-      "    fib2 = fibN;\n",
-      "}\n",
-      "\n",
-      "Console.WriteLine($\"The 20th Fibonacci number is: {fibN}\");\n",
-      "```\n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "function name: RunCode\n",
-      "raw function call: {\n",
-      "  \"code\": \"int n = 20;\\r\\nint fib1 = 0;\\r\\nint fib2 = 1;\\r\\nint fibN = 0;\\r\\n\\r\\nfor (int i = 2; i <= n; i++)\\r\\n{\\r\\n    fibN = fib1 + fib2;\\r\\n    fib1 = fib2;\\r\\n    fib2 = fibN;\\r\\n}\\r\\n\\r\\nConsole.WriteLine($\\\"The 20th Fibonacci number is: {fibN}\\\");\"\n",
-      "}\n",
-      "Runner: The 20th Fibonacci number is: 6765\n",
-      "\n",
-      "Message from User\n",
-      "--------------------\n",
-      "The 20th Fibonacci number is: 6765\n",
-      "\n",
-      "--------------------\n",
-      "\n",
-      "Message from Coder\n",
-      "--------------------\n",
-      "COMPLETE\n",
-      "\n",
+      "[COMPLETE]\n",
       "--------------------\n",
       "\n"
      ]
@@ -421,7 +376,7 @@
     },
     {
      "ename": "Error",
-     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 72\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 46\r\n   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n   at Submission#16.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
+     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 72\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 46\r\n   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n   at Submission#7.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
      "output_type": "error",
      "traceback": [
       "System.Exception: Input request cancelled\r\n",
@@ -431,7 +386,7 @@
       "   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n",
       "   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n",
       "   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n",
-      "   at Submission#16.<<Initialize>>d__0.MoveNext()\r\n",
+      "   at Submission#7.<<Initialize>>d__0.MoveNext()\r\n",
       "--- End of stack trace from previous location ---\r\n",
       "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
@@ -445,10 +400,7 @@
     "        return null; // return null to fall back to user agent\n",
     "    \n",
     "    // otherwise, send message to runner agent to either run code or install nuget packages and get the reply\n",
-    "    var reply = await runner.SendMessageAsync(msgs);\n",
-    "    // the from field must be set to user's name\n",
-    "    var message = new Message(ChatRole.Assistant, reply.Content, from: user.Name);\n",
-    "    return message;\n",
+    "    return await runner.SendMessageAsync(msgs);\n",
     "});\n",
     "\n",
     "var codingTask = new Message(ChatRole.User, \"what's the 10th of fibonacci? Print the question and result in the end.\", from: user.Name);\n",
