--- a/notebook/TwoAgentChat_UserPorxy.ipynb
+++ b/notebook/TwoAgentChat_UserPorxy.ipynb
@@ -184,6 +184,14 @@
     "    chatHistory: null, // start a new conversation\n",
     "    maxRound: 3); // exit after 3 rounds"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Further reading\n",
+    "- [TwoAgentChat_Coding](TwoAgentChat_Coding.ipynb): This notebook shows how to use a `NotebookUserAgent` and two `GPTAgent`s to write code to resolve tasks."
+   ]
   }
  ],
  "metadata": {
