--- a/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
+++ b/notebook/GroupChat_get_latest_pr_from_mlnet.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.4-1</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.4-1</span></li><li><span>AgentChat.Example.Share, 0.2.4-1</span></li><li><span>AgentChat.GPT, 0.2.4-1</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.4-6632779574</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.4-6632779574</span></li><li><span>AgentChat.Example.Share, 0.2.4-6632779574</span></li><li><span>AgentChat.GPT, 0.2.4-6632779574</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -278,31 +278,6 @@
     }
    },
    "outputs": [
-    {
-     "ename": "Error",
-     "evalue": "Microsoft.DotNet.Interactive.NoSuitableKernelException: No kernel found for Microsoft.DotNet.Interactive.Commands.RequestHoverText with target kernel '.NET'.\r\n   at Microsoft.DotNet.Interactive.Commands.KernelCommand.InvokeAsync(KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Commands\\KernelCommand.cs:line 184\r\n   at Microsoft.DotNet.Interactive.Kernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.cs:line 323\r\n   at Microsoft.DotNet.Interactive.CompositeKernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\CompositeKernel.cs:line 183\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<BuildPipeline>b__6_0(KernelCommand command, KernelInvocationContext context, KernelPipelineContinuation _) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 60\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.App.KernelExtensions.<>c__DisplayClass3_0.<<UseTelemetrySender>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensions.cs:line 124\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.App.KernelExtensionLoader.<>c__DisplayClass0_0.<<UseNuGetExtensions>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensionLoader.cs:line 21\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.DotNet.Interactive.KernelCommandPipeline.SendAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 41",
-     "output_type": "error",
-     "traceback": [
-      "Microsoft.DotNet.Interactive.NoSuitableKernelException: No kernel found for Microsoft.DotNet.Interactive.Commands.RequestHoverText with target kernel '.NET'.\r\n",
-      "   at Microsoft.DotNet.Interactive.Commands.KernelCommand.InvokeAsync(KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Commands\\KernelCommand.cs:line 184\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.cs:line 323\r\n",
-      "   at Microsoft.DotNet.Interactive.CompositeKernel.HandleAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\CompositeKernel.cs:line 183\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<BuildPipeline>b__6_0(KernelCommand command, KernelInvocationContext context, KernelPipelineContinuation _) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 60\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.App.KernelExtensions.<>c__DisplayClass3_0.<<UseTelemetrySender>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensions.cs:line 124\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_1.<<BuildPipeline>b__3>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 75\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.App.KernelExtensionLoader.<>c__DisplayClass0_0.<<UseNuGetExtensions>b__0>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\dotnet-interactive\\KernelExtensionLoader.cs:line 21\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.<>c__DisplayClass6_0.<<BuildPipeline>g__Combine|2>d.MoveNext() in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 73\r\n",
-      "--- End of stack trace from previous location ---\r\n",
-      "   at Microsoft.DotNet.Interactive.KernelCommandPipeline.SendAsync(KernelCommand command, KernelInvocationContext context) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\KernelCommandPipeline.cs:line 41"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -334,7 +309,91 @@
       "```\n",
       "\n",
       "--------------------\n",
-      "\r\n"
+      "\n",
+      "function name: RunCode\n",
+      "raw function call: {\n",
+      "  \"code\": \"using System;\\r\\nusing System.Net.Http;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nvar pullRequests = await GetPullRequests();\\r\\nConsole.WriteLine(pullRequests);\"\n",
+      "}\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "[{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\" (...too long to present)\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Great job, Runner! You have successfully retrieved the list of pull requests for the mlnet repo. The latest pull request is:\n",
+      "URL: https://api.github.com/repos/dotnet/machinelearning/pulls/6872\n",
+      "ID: 1568971683\n",
+      "Node ID: (...too long to present)\n",
+      "\n",
+      "Now, let's move on to the next step. Print the result to the console and save the result to a file named \"pr.txt\".\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "Message from Coder\n",
+      "--------------------\n",
+      "```csharp\n",
+      "using System;\n",
+      "using System.IO;\n",
+      "using System.Net.Http;\n",
+      "using System.Threading.Tasks;\n",
+      "\n",
+      "var apiUrl = \"https://api.github.com/repos/dotnet/machinelearning/pulls\";\n",
+      "var userAgent = \"MyApp\";\n",
+      "\n",
+      "async Task<string> GetPullRequests()\n",
+      "{\n",
+      "    using (var client = new HttpClient())\n",
+      "    {\n",
+      "        client.DefaultRequestHeaders.Add(\"User-Agent\", userAgent);\n",
+      "        var response = await client.GetAsync(apiUrl);\n",
+      "        response.EnsureSuccessStatusCode();\n",
+      "        var responseBody = await response.Content.ReadAsStringAsync();\n",
+      "        return responseBody;\n",
+      "    }\n",
+      "}\n",
+      "\n",
+      "async Task Main()\n",
+      "{\n",
+      "    var pullRequests = await GetPullRequests();\n",
+      "    Console.WriteLine(pullRequests);\n",
+      "    File.WriteAllText(\"pr.txt\", pullRequests);\n",
+      "}\n",
+      "\n",
+      "await Main();\n",
+      "```\n",
+      "\n",
+      "\n",
+      "--------------------\n",
+      "\n",
+      "function name: RunCode\n",
+      "raw function call: {\n",
+      "  \"code\": \"using System;\\r\\nusing System.IO;\\r\\nusing System.Net.Http;\\r\\nusing System.Threading.Tasks;\\r\\n\\r\\nvar apiUrl = \\\"https://api.github.com/repos/dotnet/machinelearning/pulls\\\";\\r\\nvar userAgent = \\\"MyApp\\\";\\r\\n\\r\\nasync Task<string> GetPullRequests()\\r\\n{\\r\\n    using (var client = new HttpClient())\\r\\n    {\\r\\n        client.DefaultRequestHeaders.Add(\\\"User-Agent\\\", userAgent);\\r\\n        var response = await client.GetAsync(apiUrl);\\r\\n        response.EnsureSuccessStatusCode();\\r\\n        var responseBody = await response.Content.ReadAsStringAsync();\\r\\n        return responseBody;\\r\\n    }\\r\\n}\\r\\n\\r\\nasync Task Main()\\r\\n{\\r\\n    var pullRequests = await GetPullRequests();\\r\\n    Console.WriteLine(pullRequests);\\r\\n    File.WriteAllText(\\\"pr.txt\\\", pullRequests);\\r\\n}\\r\\n\\r\\nawait Main();\"\n",
+      "}\n",
+      "Message from Runner\n",
+      "--------------------\n",
+      "[{\"url\":\"https://api.github.com/repos/dotnet/machinelearning/pulls/6872\",\"id\":1568971683,\"node_id\":\" (...too long to present)\n",
+      "--------------------\n",
+      "\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "Great job, Runner! You have successfully printed the result to the console and saved the result to a file named \"pr.txt\". The latest pull request is:\n",
+      "URL: https://api.github.com/repos/dotnet/machinelearning/pulls/6872\n",
+      "ID: 1568971683\n",
+      "Node ID: (...too long to present)\n",
+      "\n",
+      "Congratulations on completing the task! If there are no further steps to resolve, I will terminate the group chat.\n",
+      "--------------------\n",
+      "\n",
+      "function name: TerminateGroupChat\n",
+      "raw function call: {\n",
+      "  \"message\": \"Task completed successfully. Group chat terminated.\"\n",
+      "}\n",
+      "Message from Admin\n",
+      "--------------------\n",
+      "[GROUPCHAT_TERMINATE]: Task completed successfully. Group chat terminated.\n",
+      "--------------------\n",
+      "\n"
      ]
     }
    ],
