update notebook and api

--- a/notebook/TwoAgentChat_Coding.ipynb
+++ b/notebook/TwoAgentChat_Coding.ipynb
@@ -34,7 +34,7 @@
     {
      "data": {
       "text/html": [
-       "<div><div></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.2-1</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.2-1</span></li><li><span>AgentChat.Example.Share, 0.2.2-1</span></li><li><span>AgentChat.GPT, 0.2.2-1</span></li></ul></div></div>"
+       "<div><div><strong>Restore sources</strong><ul><li><span>https://www.myget.org/F/agentchat/api/v3/index.json</span></li></ul></div><div></div><div><strong>Installed Packages</strong><ul><li><span>AgentChat.Core, 0.2.4-6632871122</span></li><li><span>AgentChat.DotnetInteractiveFunction, 0.2.4-6632871122</span></li><li><span>AgentChat.Example.Share, 0.2.4-6632871122</span></li><li><span>AgentChat.GPT, 0.2.4-6632871122</span></li></ul></div></div>"
       ]
      },
      "metadata": {},
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -109,7 +109,7 @@
     "    name: \"Coder\",\n",
     "    roleInformation: @\"You act as dotnet coder, you write dotnet script to resolve task.\n",
     "-workflow-\n",
-    "write_code_to_resolve_coding_task\n",
+    "write code\n",
     "\n",
     "if code_has_error\n",
     "    fix_code_error\n",
@@ -127,7 +127,7 @@
     "- Don't use external data source, like file, database, etc. Create a dummy dataset if you need.\n",
     "- Always print out the result to console. Don't write code that doesn't print out anything.\n",
     "\n",
-    "Here are some examples for write_code_to_resolve_coding_task:\n",
+    "Here are some examples for write code:\n",
     "```nuget\n",
     "xxx\n",
     "```\n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -171,10 +171,36 @@
     "using System.IO;\n",
     "using AgentChat.DotnetInteractiveService;\n",
     "using Azure.AI.OpenAI;\n",
+    "using System.Text.Json;\n",
     "\n",
     "var workDir = Path.Combine(Path.GetTempPath(), \"InteractiveService\");\n",
     "if (!Directory.Exists(workDir))\n",
     "    Directory.CreateDirectory(workDir);\n",
+    "\n",
+    "var functionDefinition = new FunctionDefinition{\n",
+    "    Name = \"Greeting\",\n",
+    "    Description = \"Greeting\",\n",
+    "    Parameters = BinaryData.FromObjectAsJson(new\n",
+    "    {\n",
+    "        Type = \"object\",\n",
+    "        Properties = new\n",
+    "\t\t{\n",
+    "\t\t    greeting = new\n",
+    "\t\t    {\n",
+    "\t\t\t    Type = @\"string\",\n",
+    "\t\t\t    Description = @\"greeting\",\n",
+    "\t\t    },\n",
+    "        },\n",
+    "        Required = new []\n",
+    "\t\t{\n",
+    "\t\t    \"greeting\",\n",
+    "\t\t},\n",
+    "    },\n",
+    "    new JsonSerializerOptions\n",
+    "\t{\n",
+    "\t\tPropertyNamingPolicy = JsonNamingPolicy.CamelCase,\n",
+    "\t}),\n",
+    "};\n",
     "\n",
     "var service = new InteractiveService(workDir);\n",
     "var dotnetInteractiveFunctions = new DotnetInteractiveFunction(service);\n",
@@ -193,12 +219,13 @@
     "    call install_nuget_packages\n",
     "\n",
     "for any other case\n",
-    "    say [NO_CODE_AVAILABLE]\n",
+    "    call greeting\n",
     "-end-\",\n",
     "    temperature: 0,\n",
     "    functionMap: new Dictionary<FunctionDefinition, Func<string, Task<string>>> {\n",
     "        { dotnetInteractiveFunctions.RunCodeFunction, fixInvalidJsonFunction.FixInvalidJsonWrapper(dotnetInteractiveFunctions.RunCodeWrapper) },\n",
     "        { dotnetInteractiveFunctions.InstallNugetPackagesFunction, dotnetInteractiveFunctions.InstallNugetPackagesWrapper },\n",
+    "        { functionDefinition, async (args) => \"NO_CODE_AVAILABLE\"}\n",
     "    });\n",
     "\n",
     "// start kenel\n",
@@ -215,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -232,10 +259,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "function name: Greeting\n",
+      "raw function call: {\n",
+      "  \"greeting\": \"Hello! How can I assist you today?\"\n",
+      "}\n",
       "Message from Runner\n",
       "--------------------\n",
       "NO_CODE_AVAILABLE\n",
-      "\n",
       "--------------------\n",
       "\n",
       "function name: RunCode\n",
@@ -305,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -360,33 +390,18 @@
     },
     {
      "ename": "Error",
-     "evalue": "Input request cancelled",
+     "evalue": "System.NullReferenceException: Object reference not set to an instance of an object.\r\n   at Microsoft.DotNet.Interactive.Kernel.get_Root()\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName)\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName)\r\n   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n   at Submission#11.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
      "output_type": "error",
      "traceback": [
-      "Input request cancelled"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "Input request cancelled",
-     "output_type": "error",
-     "traceback": [
-      "Input request cancelled"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "System.Exception: Input request cancelled\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 72\r\n   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 46\r\n   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n   at Submission#7.<<Initialize>>d__0.MoveNext()\r\n--- End of stack trace from previous location ---\r\n   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)",
-     "output_type": "error",
-     "traceback": [
-      "System.Exception: Input request cancelled\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 72\r\n",
-      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName) in D:\\a\\_work\\1\\s\\src\\Microsoft.DotNet.Interactive\\Kernel.Static.cs:line 46\r\n",
+      "System.NullReferenceException: Object reference not set to an instance of an object.\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.get_Root()\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, Boolean isPassword, String typeHint, String valueName)\r\n",
+      "   at Microsoft.DotNet.Interactive.Kernel.GetInputAsync(String prompt, String typeHint, String valueName)\r\n",
       "   at AgentChat.Example.Share.NotebookUserAgent.CallAsync(IEnumerable`1 messages, CancellationToken ct)\r\n",
       "   at AgentChat.AutoReplyAgent.CallAsync(IEnumerable`1 conversation, CancellationToken ct)\r\n",
       "   at AgentChat.SequentialGroupChat.CallAsync(IEnumerable`1 conversationWithName, Int32 maxRound, Boolean throwExceptionWhenMaxRoundReached)\r\n",
       "   at AgentChat.AgentExtension.SendMessageToAgentAsync(IAgent agent, IAgent receiver, IEnumerable`1 chatHistory, Int32 maxRound, Boolean throwWhenMaxRoundReached, CancellationToken ct)\r\n",
-      "   at Submission#7.<<Initialize>>d__0.MoveNext()\r\n",
+      "   at Submission#11.<<Initialize>>d__0.MoveNext()\r\n",
       "--- End of stack trace from previous location ---\r\n",
       "   at Microsoft.CodeAnalysis.Scripting.ScriptExecutionState.RunSubmissionsAsync[TResult](ImmutableArray`1 precedingExecutors, Func`2 currentExecutor, StrongBox`1 exceptionHolderOpt, Func`2 catchExceptionOpt, CancellationToken cancellationToken)"
      ]
